# Open Firm Accounting
# A double-entry accounting application for professional services.
#
# Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
#
# Open Firm Accounting is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Open Firm Accounting is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Open Firm Accounting; see the file COPYING. If not,
# see <http://www.gnu.org/licenses/>.
#
# Authors:
#   Pierre Wieser <pwieser@trychlos.org>

pkgdocdir = $(datarootdir)/doc/@PACKAGE@-@VERSION@

appcodedir = $(pkgdocdir)/AppCode

dist_appcode_DATA = \
	DBModel.odg										\
	DBModel.pdf										\
	ImportFormats.README							\
	ObjectsHierarchy.odg							\
	Rules.ods										\
	Settings.README									\
	Signals.README									\
	Styles.README									\
	UserInterface.odg								\
	$(NULL)

dgidir = $(pkgdocdir)/DGI

dist_dgi_DATA = \
	DGI/Legifrance-LPF-Article_A47_A-1_FEC.pdf		\
	$(NULL)
