# Open Freelance Accounting
# A double-entry accounting application for freelances.
#
# Copyright (C) 2014,2015 Pierre Wieser (see AUTHORS)
#
# Open Freelance Accounting is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Open Freelance Accounting is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Open Freelance Accounting; see the file COPYING. If not,
# see <http://www.gnu.org/licenses/>.
#
# Authors:
#   Pierre Wieser <pwieser@trychlos.org>
#
# $Id$

init_datadir = $(pkgdatadir)/init_utf8_comma_pipe_fr

init_files = \
	classes-h1.csv										\
	currencies-h1.csv									\
	ledgers-h1.csv										\
	ope-templates-h2.csv								\
	rates-h2.csv										\
	$(NULL)

init_data_DATA = \
	$(init_files)										\
	$(NULL)

EXTRA_DIST = \
	$(init_data_DATA)									\
	$(NULL)
