# Open Freelance Accounting
# A double-entry accounting application for freelances.
#
# Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
#
# Open Freelance Accounting is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Open Freelance Accounting is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Open Freelance Accounting; see the file COPYING. If not,
# see <http://www.gnu.org/licenses/>.
#
# Authors:
#   Pierre Wieser <pwieser@trychlos.org>

api_includedir = $(pkgincludedir)

api_include_HEADERS = \
	ofa-extension.h										\
	\
	ofa-account-editable.h								\
	ofa-amount.h										\
	ofa-box.h											\
	ofa-buttons-box.h									\
	ofa-counter.h										\
	ofa-date-filter-hv-bin.h							\
	ofa-dossier-prefs.h									\
	ofa-extender-collection.h							\
	ofa-extender-module.h								\
	ofa-hub.h											\
	ofa-hub-def.h										\
	ofa-iabout.h										\
	ofa-icollectionable.h								\
	ofa-icollector.h									\
	ofa-idate-filter.h									\
	ofa-idbconnect.h									\
	ofa-idbeditor.h										\
	ofa-idbmeta.h										\
	ofa-idbmeta-def.h									\
	ofa-idbmodel.h										\
	ofa-idbperiod.h										\
	ofa-idbprovider.h									\
	ofa-idbprovider-def.h								\
	ofa-iexeclose-close.h								\
	ofa-iexportable.h									\
	ofa-igetter.h										\
	ofa-igetter-def.h									\
	ofa-iimportable.h									\
	ofa-iimporter.h										\
	ofa-iprefs-page.h									\
	ofa-iprefs-page-def.h								\
	ofa-iprefs-provider.h								\
	ofa-iprefs-provider-def.h							\
	ofa-isingle-keeper.h								\
	ofa-istore.h										\
	ofa-itheme-manager.h								\
	ofa-itheme-manager-def.h							\
	ofa-list-store.h									\
	ofa-ope-template-editable.h							\
	ofa-page.h											\
	ofa-page-def.h										\
	ofa-page-prot.h										\
	ofa-periodicity.h									\
	ofa-periodicity-bin.h								\
	ofa-portfolio-collection.h							\
	ofa-preferences.h									\
	ofa-settings.h										\
	ofa-stream-format.h									\
	\
	ofo-account.h										\
	ofo-account-def.h									\
	ofo-base.h											\
	ofo-base-def.h										\
	ofo-base-prot.h										\
	ofo-bat.h											\
	ofo-bat-def.h										\
	ofo-bat-line.h										\
	ofo-class.h											\
	ofo-class-def.h										\
	ofo-concil.h										\
	ofo-concil-def.h									\
	ofo-currency.h										\
	ofo-currency-def.h									\
	ofo-dossier.h										\
	ofo-dossier-def.h									\
	ofo-entry.h											\
	ofo-ledger.h										\
	ofo-ledger-def.h									\
	ofo-ope-template.h									\
	ofo-ope-template-def.h								\
	ofo-rate.h											\
	ofo-rate-def.h										\
	\
	ofs-account-balance.h								\
	ofs-bat.h											\
	ofs-concil-id.h										\
	ofs-currency.h										\
	ofs-ope.h											\
	$(NULL)
