# Open Firm Accounting
# A double-entry accounting application for professional services.
#
# Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
#
# Open Firm Accounting is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Open Firm Accounting is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Open Firm Accounting; see the file COPYING. If not,
# see <http://www.gnu.org/licenses/>.
#
# Authors:
#   Pierre Wieser <pwieser@trychlos.org>

api_includedir = $(pkgincludedir)

api_include_HEADERS = \
	ofa-extension.h										\
	\
	ofa-account-editable.h								\
	ofa-amount.h										\
	ofa-box.h											\
	ofa-buttons-box.h									\
	ofa-core.h											\
	ofa-counter.h										\
	ofa-date-filter-hv-bin.h							\
	ofa-dossier-prefs.h									\
	ofa-extender-collection.h							\
	ofa-extender-module.h								\
	ofa-formula-engine.h								\
	ofa-hub.h											\
	ofa-hub-def.h										\
	ofa-iabout.h										\
	ofa-idate-filter.h									\
	ofa-idbconnect.h									\
	ofa-idbeditor.h										\
	ofa-idbmeta.h										\
	ofa-idbmeta-def.h									\
	ofa-idbmodel.h										\
	ofa-idbperiod.h										\
	ofa-idbprovider.h									\
	ofa-idbprovider-def.h								\
	ofa-iexe-close.h									\
	ofa-iexportable.h									\
	ofa-igetter.h										\
	ofa-igetter-def.h									\
	ofa-iimportable.h									\
	ofa-iimporter.h										\
	ofa-import-duplicate.h								\
	ofa-iprintable.h									\
	ofa-iproperties.h									\
	ofa-irenderable.h									\
	ofa-isignal-hub.h									\
	ofa-isortable.h										\
	ofa-istore.h										\
	ofa-itheme-manager.h								\
	ofa-itheme-manager-def.h							\
	ofa-itree-adder.h									\
	ofa-list-store.h									\
	ofa-ope-template-editable.h							\
	ofa-ope-template-store.h							\
	ofa-page.h											\
	ofa-page-def.h										\
	ofa-page-prot.h										\
	ofa-periodicity.h									\
	ofa-periodicity-bin.h								\
	ofa-portfolio-collection.h							\
	ofa-preferences.h									\
	ofa-render-page.h									\
	ofa-settings.h										\
	ofa-stream-format.h									\
	ofa-tree-store.h									\
	\
	ofo-account.h										\
	ofo-account-def.h									\
	ofo-base.h											\
	ofo-base-def.h										\
	ofo-base-prot.h										\
	ofo-bat.h											\
	ofo-bat-def.h										\
	ofo-bat-line.h										\
	ofo-class.h											\
	ofo-class-def.h										\
	ofo-concil.h										\
	ofo-concil-def.h									\
	ofo-currency.h										\
	ofo-currency-def.h									\
	ofo-dossier.h										\
	ofo-dossier-def.h									\
	ofo-entry.h											\
	ofo-ledger.h										\
	ofo-ledger-def.h									\
	ofo-ope-template.h									\
	ofo-ope-template-def.h								\
	ofo-rate.h											\
	ofo-rate-def.h										\
	\
	ofs-account-balance.h								\
	ofs-concil-id.h										\
	ofs-currency.h										\
	ofs-ope.h											\
	$(NULL)
